--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "class-validator",
+  "name": "@socialenergy/class-validator",
   "private": true,
   "version": "0.12.2",
   "description": "Class-based validation with Typescript / ES6 / ES5 using decorators or validation schemas. Supports both node.js and browser",
